--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Deploy to Server
+    - name: Deploy to Ubuntu Server
       uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.HOST }}
